syntax = "proto3";

option go_package = "common/communication/server-comm/protocol";

import "proto/stages/alpha.proto";
import "proto/stages/beta.proto";
import "proto/stages/gamma.proto";
import "proto/stages/delta.proto";
import "proto/stages/epsilon.proto";
import "proto/stages/zeta.proto";
import "proto/stages/eta.proto";
import "proto/stages/theta.proto";
import "proto/stages/iota.proto";
import "proto/stages/kappa.proto";
import "proto/stages/lambda.proto";
import "proto/stages/mu.proto";
import "proto/stages/nu.proto";
import "proto/stages/result1.proto";
import "proto/stages/result2.proto";
import "proto/stages/result3.proto";
import "proto/stages/result4.proto";
import "proto/stages/result5.proto";


message Task {
    oneof Stage {
        Alpha alpha = 1;
        Beta beta = 2;
        Gamma gamma = 3;
        Delta_1 delta_1 = 4;
        Delta_2 delta_2 = 5;
        Epsilon epsilon = 6;
        Zeta zeta = 7;
        Eta_1 eta_1 = 8;
        Eta_2 eta_2 = 9;
        Theta theta = 10;
        Iota iota = 11;
        Kappa_1 kappa_1 = 12;
        Kappa_2 kappa_2 = 13;
        Lambda lambda = 14;
        Mu mu = 15;
        Nu_1 nu_1 = 16;
        Nu_2 nu_2 = 17;
        Result1 result1 = 18;
        Result2 result2 = 19;
        Result3 result3 = 20;
        Result4 result4 = 21;
        Result5 result5 = 22;
    }
}
